--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -14,15 +14,15 @@
       <ul>
         <li>
           <label for="uname">User name:</label>
-          <input type="text" name="uname" id=	"uname" required minlength="5" maxlength="20">
+          <input type="text" name="uname" id=	"uname" required minlength="5" maxlength="20" pattern="[a-z][.][a-z|0-9]+">
         </li>
         <li>
           <label for="email">Email address:</label>
-          <input type="email" name="email" id="email" required>
+          <input type="email" name="email" id="email" required minlength="10" pattern="\w+[@bigcorp.eu]+">
         </li>
         <li>
           <label for="phone">Phone number:</label>
-          <input type="tel" name="phone" id="phone" required maxlength="15" pattern="[0-9]+">
+          <input type="tel" name="phone" id="phone" required minlength="10" maxlength="12" pattern="[0-9]+|[0-9]{3}[ |-|.][0-9]{3}[ |-|.][0-9]{4}">
         </li>
         <li>
           <label for="comment">Comment:</label>
