starting js section

--- a/top/grid/index.html
+++ b/top/grid/index.html
@@ -23,5 +23,17 @@
 			<div class="mdn-item" id="item4">4</div>
 		</div>
 	</div>
+	<div class="advanced-grid-container">
+		<div class="item">odin 1</div>
+		<div class="item">odin 2</div>
+		<div class="item">odin 3</div>
+		<div class="item">odin 4</div>
+		<div class="item">odin 5</div>
+		<div class="item">odin 6</div>
+		<div class="item">odin 7</div>
+		<div class="item">odin 8</div>
+		<div class="item">odin 9</div>
+		<div class="item">odin 10</div>
+	</div>
 </body>
 </html>
